# atplt-project

./: .gitmodules  Cargo.toml  Project_Weak_Memory_Arm_Toy.md
graphs/: ec_rw.dot  ec_ww.dot  g0.dot  g10000t10l100.dot  g10000t10l100.txt  g10000t5l2000.dot  g10000t5l2000.txt  g1000t5l100.dot  g1000t5l100.txt  g100t5l20.dot  g100t5l20.txt  g20l4t4.dot  g25t4l8.dot  g25t4l8.txt  g28.dot  g30t5l8.dot  g30t5l8.txt  g35t4l10.dot  g35t4l10.txt  g50t4l10.dot  g50t4l10.txt  sc-consistent15l4t4i10.dot  sc-consistent15l4t4i7.dot  sc-consistent15l4t4i8.dot  sc-consistent15l4t4i9.dot  sc-consistent25l4t4i18.dot  sc-consistent25l4t4i19.dot  sc-consistent25l4t4i20.dot  sc-inconsistent25l4t4i28.dot  test.dot  tso-consistent100l10t15i72.dot  tso-consistent100l10t15i73.dot  tso-consistent10l4t4i3.dot  tso-consistent11l4t4i4.dot  tso-consistent12l4t4i3.dot  tso-consistent13l4t4i3.dot  tso-consistent14l4t4i3.dot  tso-consistent15l4t4i0.dot  tso-consistent15l4t4i1.dot  tso-consistent15l4t4i12.dot  (+31 more)
proofs/: README.md
proofs/armtoy/: _CoqProject  formal_proofs.v  formal_proofs2.v
src/: executions.rs  fenwick.rs  iter.rs  main.rs  relations.rs
